--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
+    "react-scroll": "^1.9.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
