--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -49,15 +49,15 @@ jobs:
         uses: actions/configure-pages@v5
         with:
           static_site_generator: next
-          generator_config_file: app/next.config.mjs
+          generator_config_file: ./app/next.config.mjs
 
       - name: Restore cache
         uses: actions/cache@v4
         with:
           path: app/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('app/package-lock.json', 'app/yarn.lock') }}-${{ hashFiles('app/**/*.js', 'app/**/*.jsx', 'app/**/*.ts', 'app/**/*.tsx') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('./app/package-lock.json', './app/yarn.lock') }}-${{ hashFiles('app/**/*.js', 'app/**/*.jsx', 'app/**/*.ts', 'app/**/*.tsx') }}
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('app/package-lock.json', 'app/yarn.lock') }}-
+            ${{ runner.os }}-nextjs-${{ hashFiles('./app/package-lock.json', './app/yarn.lock') }}-
 
       - name: Install dependencies
         run: |
@@ -72,7 +72,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: app/out
+          path: ./app/out
 
   deploy:
     environment:
